# ouranos-core

./: .gitignore  CHANGELOG.md  COPYRIGHT  README.md  alembic.ini  config.py  debug_tools.py  default.py  gaia.py  gaiaConfig.py  gaiaTools.py  gaiaWeb.py  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py  update.sh  utils.py
.github/workflows/: qc.yml  test.yml
app/: API.py  __init__.py  cache.py  dataspace.py  email.py  events_dispatcher.py  models.py  models_flasksqlalchemy.py  notifications.py  outside.py  socketio_events.py  system_monitor.py  utils.py
app/API/: __init__.py  admin.py  app.py  ecosystems.py  messages.py  utils.py  various.py  warnings.py  weather.py
app/API/messages/: __init__.py
app/admin/: __init__.py  forms.py  routes.py
app/api/: __init__.py  routes.py
app/auth/: __init__.py  forms.py  routes.py
app/common/: decorators.py
app/errors/: handlers.py
app/events/: __init__.py  admin.py  dispatcher.py  gaia.py  root.py
app/main/: __init__.py  decorators.py  events.py  filters.py  forms.py  layout.py  routes.py
app/services/: __init__.py  calendar.py  daily_recap.py  sun_times.py  system_monitor.py  telegram_chat_bot.py  template.py  weather.py  webcam.py
app/templates/: base.html  menu.html
app/templates/admin/: db_home.html  db_management.html  invite_user.html  log.html  log_home.html  managers.html  services.html  snapshot.html  system.html
app/templates/auth/: auth_base.html  invitation.html  login.html  register.html
app/templates/errors/: 403.html  404.html  500.html  error.html
app/templates/main/: about.html  calendar.html  care.html  environment.html  faq.html  health.html  home.html  home_old.html  license.html  menu.html  outside.html  plants.html  preferences.html  sensors.html  settings.html  switches.html  user.html  user_me.html  warning.html  weather.html
app/templates/messages/: invitation.html  welcome.html
app/views/: decorators.py
app/views/admin/: __init__.py  forms.py  routes.py
app/views/api/: __init__.py  routes.py
app/views/auth/: __init__.py  forms.py  routes.py
app/views/errors/: __init__.py  handlers.py
app/views/main/: __init__.py  filters.py  forms.py  layout.py  routes.py
app/wiki/: __init__.py
config/: __init__.py
dataspace/: __init__.py  cache.py  custom_dumps.py  dispatcher.py  pubsub.py  queue.py
migrations/: env.py  script.py.mako
migrations/versions/: 092bfca12615_205_user_confirmation.py  092bfca12615_user_confirmation.py  17c093dc188e_298_unique_constraints.py  1e8ec14d8183_catch_up.py  226f20fc21cd_326_hardware_active.py  500b502bb663_93_more_logical_primary_keys.py  500b502bb663_more_logical_primary_keys.py  53d80616ed16_304_hardware_group.py  71e1ef7da0b8_270_plants_event.py  71e1ef7da0b8_271_plants_event.py  a5c9f317bcea_354_fix_gaia_models.py  a721d18f48c6_80_init.py  c03c5e3628e9_398_optimise_sensor_get_multiple.py  d3c34effeefa_160_lighting.py  d3c34effeefa_lighting.py  e932af6045f2_94_use_system_uid.py  e932af6045f2_improve_crud.py  f21c94cd8a2f_230_sql_int_enum.py  f21c94cd8a2f_230_to_modify.py  fc8f9d8bf7b6_261_lookup_unique_constraint.py  ff96d1aa88d4_97_place_unique_constraint.py  ff96d1aa88d4_place_primary_key.py
scripts/: gen_profile.sh  gen_service.sh  install.sh  logging.sh  start.sh  stop.sh  update.sh  update_ouranos.sh
scripts/utils/: gen_profile.sh  gen_pyproject.sh  gen_service.sh  logging.sh  sandbox.sh
services/: __init__.py  archiver.py  calendar.py  daily_recap.py  database.py  notifications.py  shared_resources.py  sun_times.py  system_monitor.py  telegram_chat_bot.py  template.py  weather.py  webcam.py
services/messages/: __init__.py
src/: aggregator.py  cache.py  database.py  models.py  redis_cache.py  utils.py
src/aggregator/: __init__.py  decorators.py  events.py  main.py  socketio.py
src/api/: ABC.py  __init__.py  admin.py  app.py  exceptions.py  gaia.py  system.py  warnings.py  weather.py
src/app/: __init__.py  auth.py  dependencies.py  docs.py  factory.py  main.py  models.py  utils.py
src/app/API/: __init__.py  (+7 more)
src/chat_bot/: __init__.py  auth.py  commands.py  decorators.py  main.py  telegram_chat_bot.py
src/core/: __init__.py  cache.py  consts.py  g.py  plugin.py  redis_cache.py  runner.py  types.py  typing.py  utils.py  validate.py
src/database/: __init__.py  wrapper.py
src/dataspace/: __init__.py  cache.py  custom_dumps.py  dispatcher.py  pubsub.py  queue.py
src/ouranos/: __init__.py  __main__.py  cli.py  main.py
src/scripts/: generate_js_parameters.py
src/services/: __init__.py  archiver.py  calendar.py  daily_recap.py  notifications.py  shared_resources.py  sun_times.py  system_monitor.py  telegram_chat_bot.py  template.py  weather.py  webcam.py
src/test/: test_main.py
test/: conftest.py  test_auth.py  test_main.py
tests/: class_fixtures.py  conftest.py  test_auth.py  test_main.py  test_scripts.py  utils.py
tests/aggregator/: class_fixtures.py  conftest.py  store.py  test_aggregator.py  test_archiver.py  test_events.py  test_file_server.py
tests/base/: conftest.py  test_core.py  test_mail.py  test_models.py  test_user.py
tests/data/: app.py  auth.py  gaia.py  system.py  users.py
tests/web_server/: class_fixtures.py  conftest.py  test_events.py  test_routes.py  test_web_server.py
(+337 files in other folders)
