[project]
name = "ouranos"
description = "An app to manage Gaia instances"
authors = [
    {name = "Valentin Ambroise", email = "valentin.ambroise@outlook.com"}
]
requires-python = ">=3.7"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "APScheduler~=3.9.1",
    "aio_pika~=8.3.0",
    "aiofiles~=22.1.0",
    "aiohttp~=3.8.3",
    "aiosqlite~=0.17.0",
    "argon2-cffi~=21.3.0",
    "asyncache~=0.3.1",
    "cachetools~=5.2.0",
    "click~=8.1.3",
    "cryptography~=37.0.4",
    "fastAPI~=0.100.0",
    "jinja2~=3.1.2",
    "orjson~=3.8.6",
    "psutil~=5.9.1",
    "pydantic~=2.0.2",
    "pyjwt~=2.4.0",
    "python-socketio~=5.7.1",
    "requests~=2.28.1",
    "setproctitle~=1.3.1",
    "SQLAlchemy~=2.0.0",
    "uvicorn[standard]~=0.18.3",

    # Conditional
    "importlib_metadata; python_version < '3.8'",

    # From git
    "event-dispatcher @ git+https://github.com/vaamb/event-dispatcher.git",
    "gaia-validators @ git+https://github.com/vaamb/gaia-validators.git",
    "sqlalchemy-wrapper @ git+https://github.com/vaamb/sqlalchemy-wrapper.git",
]

[project.entry-points."ouranos.plugins"]
dummy = "ouranos.sdk.tests.plugin:dummy_plugin"

[project.optional-dependencies]
test = [
    "pytest~=7.1.2",
    "pytest-asyncio~=0.21.0",
    "httpx~=0.24.0",
]

[project.urls]
repository  = "https://github.com/vaamb/ouranos-core.git"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ouranos.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
