[project]
name = "ouranos"
description = "An app to manage Gaia instances"
authors = [
    {name = "Valentin Ambroise", email = "valentin.ambroise@outlook.com"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "alembic~=1.13",
    "APScheduler~=3.10",
    "aio_pika~=8.3",
    "aiofiles~=22.1",
    "aiohttp~=3.8",
    "aiosqlite~=0.17",
    "argon2-cffi~=21.3",
    "cachetools~=5.2",
    "click~=8.1",
    "cryptography~=40.0",
    "fastAPI~=0.110",
    "jinja2~=3.1",
    "numpy~=2.1",
    "orjson~=3.8",
    "pillow~=10.4",
    "psutil~=5.9",
    "pydantic~=2.4",
    "pyjwt~=2.4",
    "python-socketio~=5.7",
    "requests~=2.28",
    "setproctitle~=1.3",
    "SQLAlchemy~=2.0",
    "uvicorn[standard]~=0.25",

    # From git
    "event-dispatcher @ git+https://github.com/vaamb/event-dispatcher.git",
    "gaia-validators @ git+https://github.com/vaamb/gaia-validators.git",
    "sqlalchemy-wrapper @ git+https://github.com/vaamb/sqlalchemy-wrapper.git",
]

[project.entry-points."ouranos.plugins"]
dummy = "ouranos.sdk.tests.plugin:dummy_plugin"

[project.optional-dependencies]
test = [
    "pytest~=7.1",
    "pytest-asyncio~=0.21",
    "httpx~=0.24",
]

[project.urls]
repository  = "https://github.com/vaamb/ouranos-core.git"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ouranos.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
